# bifrost

./: .gitignore  meson.build  meson_options.txt  meson_srclist.txt  meson_srclist_cuda.txt  meson_srclist_cuda_jit.txt  stringify.sh
include/: meson.build
internal/: run_ctypesgen.sh.in  run_post_install.sh.in  stringify.sh.in
meson/: python_blocks_srclist.txt  python_srclist.txt  python_telemetry_srclist.txt  python_version_srclist.txt  python_views_srclist.txt  srclist_cuda.txt
python/: meson.build
src/: stringify.sh
subprojects/: stringify.wrap
subprojects/stringify/: meson.build
