headers = [
    'bifrost/Common.hpp',
    'bifrost/Ring.hpp',
    'bifrost/address.h',
    'bifrost/affinity.h',
    'bifrost/array.h',
    'bifrost/common.h',
    'bifrost/cuda.h',
    'bifrost/fdmt.h',
    'bifrost/fft.h',
    'bifrost/fir.h',
    'bifrost/linalg.h',
    'bifrost/map.h',
    'bifrost/memory.h',
    'bifrost/proclog.h',
    'bifrost/quantize.h',
    'bifrost/reduce.h',
    'bifrost/ring.h',
    'bifrost/romein.h',
    'bifrost/testsuite.h',
    'bifrost/transpose.h',
    'bifrost/udp_capture.h',
    'bifrost/udp_socket.h',
    'bifrost/udp_transmit.h',
    'bifrost/unpack.h'
]

install_headers(headers)